--- a/FeatureExtractionModule/src/autoencoder_approach/autoencoder_classifiers.html
+++ b/FeatureExtractionModule/src/autoencoder_approach/autoencoder_classifiers.html
@@ -13093,10 +13093,10 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>autoencoders:<br>
-<a href="#Undercomplete-Autoencoders">Undercomplete Autoencoders</a><br>
-<a href="#Sparse-Autoencoders">Sparse Autoencoders</a><br>
-<a href="#Deep-Autoencoders">Deep Autoencoders</a><br>
-<a href="#Contractive-Autoencoders">Contractive Autoencoders</a></p>
+<a href="#Undercomplete-Autoencoder">Undercomplete Autoencoder</a><br>
+<a href="#Sparse-Autoencoder">Sparse Autoencoder</a><br>
+<a href="#Deep-Autoencoder">Deep Autoencoder</a><br>
+<a href="#Contractive-Autoencoder">Contractive Autoencoder</a></p>
 <p>classifiers:<br>
 <a href="#Simple-dense-layer">Simple dense layer</a><br>
 <a href="#LSTM-based-classifier">LSTM-based classifier</a><br>
@@ -13447,7 +13447,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Undercomplete-autoencoder">Undercomplete autoencoder<a class="anchor-link" href="#Undercomplete-autoencoder">&#182;</a></h4><p>from <a href="https://blog.keras.io/building-autoencoders-in-keras.html">https://blog.keras.io/building-autoencoders-in-keras.html</a></p>
+<h4 id="Undercomplete-Autoencoder">Undercomplete Autoencoder<a class="anchor-link" href="#Undercomplete-Autoencoder">&#182;</a></h4><p>from <a href="https://blog.keras.io/building-autoencoders-in-keras.html">https://blog.keras.io/building-autoencoders-in-keras.html</a></p>
 
 </div>
 </div>
